add ui kit as import in custom scss so we can use scss variables

--- a/static_src/scss/main.scss
+++ b/static_src/scss/main.scss
@@ -1,5 +1,9 @@
+$gov-ui-kit-image-base-url: 'https://gov-au-ui-kit.apps.staging.digital.gov.au/latest/img/';
+
+@import "~gov-au-ui-kit";
+
 body {
   header {
-    background-color: #000!important;
+    background-color: $light-green;
   }
 }
